NEW - # 567: IProfile API refactoring - handling of IProfileObjects https://dev.bjoernsen.de/planerclient/ticket/567